menu header padding fix
padding was too high so that some text would be overlapped.

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -122,8 +122,8 @@
   width: 85vw;
   padding-right: 7.5vw;
   padding-left: 7.5vw;
-  padding-top: 5vh;
-  padding-bottom: 5vh;
+  padding-top: 4vh;
+  padding-bottom: 4vh;
   display: flex;
   align-items: center;
   position: absolute;
